<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/initial_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="40dp"
    android:layout_marginStart="40dp"
    android:paddingTop="16dp"
    android:paddingHorizontal="20dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!--Contenedor general-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Titulo-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estimado Usuario"
                style="@style/TextAppearance.AppCompat.Title"
                >
            </TextView>
        </LinearLayout>

        <!--Parrafo 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:textColor="@android:color/black"
                android:text="@string/dialogInicial1"
                android:layout_marginBottom="20dp">

            </TextView>
        </LinearLayout>

        <!--Parrafo 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:textColor="@android:color/black"
                android:text="@string/dialogInicial2"
                android:layout_marginBottom="20dp"
                >

            </TextView>
        </LinearLayout>

        <!--Parrafo 3 mientras conduces no uses el celular-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/dialogInicial3"
                android:textColor="@android:color/black">

            </TextView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
